--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ description = "Python API wrapper for encore.us"
 readme = "README.md"
 keywords = ["sng", ".sng", "clone hero", "ch", "file", "sng-format", "sng-parse"]
 license = {file = "LICENSE"}
-version = "1.0.0"
+version = "1.0.0-1"
 requires-python = ">= 3.10"
 dependencies = [
   "requests",
@@ -26,6 +26,9 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
 ]
+
+[project.urls]
+homepage = "https://github.com/joshrmcdaniel/encore-python"
 
 [tool.setuptools.packages.find]
 where = ["src/"]
