--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,12 @@ description = "Python API wrapper for encore.us"
 readme = "README.md"
 keywords = ["sng", ".sng", "clone hero", "ch", "file", "sng-format", "sng-parse"]
 license = {file = "LICENSE"}
-version = "1.0.0-1"
+version = "1.1.0"
 requires-python = ">= 3.10"
 dependencies = [
   "requests",
-  "jsonobject"
+  "jsonobject",
+  "sng-parser"
 ]
 authors = [
   {name = "Josh Mcdaniel", email = "80354972+joshrmcdaniel@users.noreply.github.com"},
